--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^1.1.2"
+    "truffle": "^5.5.2",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
